--- a/front_end/package.json
+++ b/front_end/package.json
@@ -13,7 +13,7 @@
     "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-saga": "^1.2.2",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
