--- a/front_end/package.json
+++ b/front_end/package.json
@@ -11,6 +11,8 @@
     "openai": "^4.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.23.0",
