--- a/front_end/package.json
+++ b/front_end/package.json
@@ -20,6 +20,7 @@
     "redux-saga": "^1.2.2",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.5.4",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.0",
     "xml-js": "^1.6.11"
   },
